# pandacea-protocol

./: .cspell.json  .gitignore  .markdown-link-check.json  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  AGGRESSIVE_REPUTATION_DECAY_IMPLEMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  DIFFERENTIATED_DISPUTE_STAKES_IMPLEMENTATION.md  Dockerfile.pysyft  IMPLEMENTATION_SUMMARY.md  IPFS_INTEGRATION.md  LICENSE  Makefile  README.md  REPRODUCIBLE_BUILDS_SUMMARY.md  SECURITY_IMPLEMENTATION.md  SECURITY_SCANNING_IMPLEMENTATION.md  STAKE_BASED_DISPUTES_IMPLEMENTATION.md  VERIFICATION.md  docker-compose.pysyft.yml  docker-compose.yml  env_example_temp  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  test_aggressive_decay.ps1  test_differentiated_stakes.ps1  test_ipfs_integration.py  test_security_scanning.ps1  test_security_scanning.sh
abi/: .gitkeep
agent-backend/: .gosec  ASYNC_PRIVACY_REFACTOR.md  Dockerfile  Dockerfile.pysyft  LEASE_STATE_MACHINE.md  Makefile  README.md  build_pysyft_image.ps1  build_pysyft_image.sh  config.yaml  go.mod  go.sum  privacy_accountant_state.json  products.json  test_startup.py  verify_implementation.py
builder-sdk/: .bandit  BLOCKCHAIN_INTEGRATION.md  CHANGELOG.md  README.md  pyproject.toml  test_authentication.py  verify_sdk.py
builder-sdk/examples/: aggressive_decay_example.py  basic_usage.py  blockchain_lease_example.py  dynamic_staking_example.py  federated_learning_example.py
builder-sdk/pandacea_sdk/: __init__.py  client.py  errors.py  exceptions.py  models.py  reliability.py  security_demo.py  telemetry.py
builder-sdk/tests/: __init__.py  test_client.py  test_exceptions.py  test_models.py  test_reliability.py  test_security_scan.py
contracts/: .gitmodules  LeaseAgreement.abi.json  README.md  VERIFICATION_RESULTS.md  compile.bat  foundry.toml  generate_bindings.ps1  generate_bindings.sh  verify_contracts.py
docs/: AUDIT.md  FEDERATED_LEARNING_INTEGRATION.md  LLM Guiding Principles (v2.0).md  PRIVACY_BOUNDARY.md  Pandacea Protocol - Internal Strategic & Operational Plan v3.2.md  Pandacea Protocol - System Design Document (SDD) (v1.2).md  Pandacea Protocol - System Design Document (SDD) v1.3.md  Pandacea Protocol - System Design Document (SDD) v1.4.md  Pandacea The Problem - v4.0.md  (+19 more)
(+107 files in other folders)
