[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pandacea-protocol"
version = "0.1.0"
description = "Pandacea Protocol - Federated Learning with Privacy and Incentives"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
warn_return_any = true
