[tool.poetry]
name = "pandacea-sdk"
version = "0.3.0"
description = "Python SDK for interacting with the Pandacea Agent API"
authors = ["Pandacea Team <team@pandacea.org>"]
readme = "README.md"
packages = [{include = "pandacea_sdk"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.31.0"
pydantic = "2.5.0"
cryptography = "41.0.0"
py-multibase = "1.0.3"
py-multihash = "2.0.1"
web3 = "6.11.1"
ipfshttpclient = "0.8.0"
opentelemetry-api = "1.25.0"
opentelemetry-sdk = "1.25.0"
opentelemetry-exporter-otlp = "1.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
pytest-mock = "3.12.0"
requests-mock = "1.11.0"
flake8 = "6.1.0"
black = "23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"] 